--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "autosave",
   "version": "1.0.0",
   "description": "Notepad auto saving Windows program",
-  "main": "index.js",
+  "main": "main.js",
   "scripts": {
     "start": "electron ."
   },
