--- a/package.json
+++ b/package.json
@@ -1,32 +1,32 @@
 {
-  "name": "typing-assistant",
-  "version": "1.0.0",
+  "name": "electron-serialport",
+  "version": "1.0.1",
+  "description": "A minimal Electron application with node serialport",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "install": "electron-rebuild"
   },
-  "devDependencies": {
-    "electron-rebuild": "^1.1.3"
-  },
-  "dependencies": {
-    "electron-prebuilt": "^0.36.7",
-    "johnny-five": "^0.9.23"
-  },
-  "description": "The program for Graduation Project",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sauber92/GraduationProject-TA.git"
+    "url": "git@github.com:johnny-five-io/electron-serialport.git"
   },
   "keywords": [
-    "electron",
-    "app",
-    "johnny-five",
-    "arduino"
+    "Electron",
+    "quick",
+    "start",
+    "tutorial",
+    "demo"
   ],
-  "author": "Junyoung Jung(sauber92)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/sauber92/GraduationProject-TA/issues"
+  "author": "GitHub",
+  "license": "CC0-1.0",
+  "devDependencies": {
+    "electron": "^1.4.1",
+    "electron-rebuild": "^1.4.0"
   },
-  "homepage": "https://github.com/sauber92/GraduationProject-TA#readme"
+  "dependencies": {
+    "app": "^0.1.0",
+    "data-table": "^2.0.0",
+    "serialport": "^4.0.7"
+  }
 }
