윈도우 설치 및 실행파일 추가 electron-winstaller를 사용하여 윈도우 설치파일 생성

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dist:osx": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=public/img/icons/Icon.png.icns --prune=true --out=dist",
-    "dist:win32": "node installer.js"
+    "package-mac": "electron-packager . --overwrite --platform=darwin --arch=x64 --icon=public/img/icons/Icon.png.icns --prune=true --out=dist",
+    "package-win": "electron-packager . --overwrite --asar=true --platform=win32 --arch=ia32 --icon=public/img/icons/Icon.ico --prune=true --out=dist"
   },
   "repository": {
     "type": "git",
